--- a/lockhart.css
+++ b/lockhart.css
@@ -64,7 +64,7 @@ li {
 a:link {
 	text-decoration: none;
 }
-a:link span.nameLink {
+a.nameLink:link {
 	text-decoration: none;
 	color:black;
 }
@@ -77,6 +77,7 @@ a:hover {
 a.annotation {
 	text-decoration: none;
 }
+
 h1 {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 1.25em;
@@ -116,6 +117,15 @@ margin-top: -360px;
 height: 360px;
 visibility: hidden;	
 }
+
+p.nameListing {
+display: block;
+content: " ";
+margin-top: -360px;
+height: 360px;
+visibility: hidden;	
+}
+
 a.notePointer:before {
 display: inline-block;
 content: " ";
