Just about have names linked to the appendices, but nicknames aren't being handled correctly.

--- a/lockhart.css
+++ b/lockhart.css
@@ -118,8 +118,8 @@ height: 360px;
 visibility: hidden;	
 }
 
-p.nameListing {
-display: block;
+a.nameListing:before {
+display: inline-block;
 content: " ";
 margin-top: -360px;
 height: 360px;
