--- a/lockhart.css
+++ b/lockhart.css
@@ -179,6 +179,16 @@ sup.noteAnchor {
 	clear: both;
 }
 
+p.hang15 {
+    margin-left:15px;
+    text-indent:-15px;
+}
+
+p.hang25 {
+    margin-left:25px;
+    text-indent:-25px;
+}
+
 .footer {
 	display: block;
 	width: 850px;
