--- a/trunk/lockhart.css
+++ b/trunk/lockhart.css
@@ -14,7 +14,7 @@
 	width: 800px;
 	font-family: 'Fanwood Text',georgia, serif;
 }
-#display1 {
+.display_left {
 	display: inline;
 	float: left;
 	margin-bottom: 0;
@@ -23,8 +23,8 @@
 	height: 75px;
 	text-align: left;
 }
-#display2, #display3, #display4, #display5 {
-	margin-left: 75px;
+.display_addl {
+	margin-left: 155px;
 	display: inline;
 	float: left;
 	margin-bottom: 0;
