--- a/trunk/lockhart.css
+++ b/trunk/lockhart.css
@@ -13,6 +13,7 @@
 #maintext {
 	width: 800px;
 	font-family: 'Fanwood Text',georgia, serif;
+	border-left:double;
 }
 .display_left {
 	display: inline;
@@ -146,6 +147,15 @@ margin-top: -200px;
 height: 200px;
 visibility: hidden;	
 }
+
+.jump_link:before {
+display: inline-block;
+content: " ";
+margin-top: -12em;
+height: 12em;
+visibility: hidden;	
+}
+
 sup.noteAnchor {
   font-size:.85em;
   font-weight: bold;
