--- a/lockhart.css
+++ b/lockhart.css
@@ -2,19 +2,23 @@
 
 .masthead_background {
        width:1005px;
-       height:150px;
+       height:120px;
        position:fixed;
+        background-color: rgba(204, 229, 255, 0.8);
        background:url("polar-map-grid.jpg");
-       z-index:2;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10 px;
+        border-radius: 10px;	
+       z-index:4;
        }
 
 .masthead {
 	   vertical-align: top;
-	   text-align:center;
+	   /*text-align:center;*/
 	   width:1005px;
-	   height:75px;
+	   height:60px;
 	   top:0;
-	   padding-top:0px;
+	   /*padding-top:0px;
 	   position: fixed;
 	   background-color: rgba(204, 229, 255, 0.8);
 	   -webkit-border-top-left-radius: 10px;
@@ -22,7 +26,7 @@
 	   -webkit-border-top-right-radius: 10px;
        -moz-border-top-right-radius: 10 px;
        border-top-left-radius: 10px;	
-       border-top-right-radius: 10px;	
+       border-top-right-radius: 10px;*/	
 	   /* color: rgba(1, 1, 1, 0.8); */
 	   z-index:3;
 }
@@ -38,10 +42,10 @@
 	margin-left:15px;
 	display: inline;
 	float: left;
-	margin-bottom: 0;
-	background-color: #fff;
-	padding-top: 15px;
-    background-color: rgba(204, 229, 255, 0.8);
+	/*margin-bottom: 0;
+	background-color: #fff;*/
+	padding-top: 0px;
+    /*background-color: rgba(204, 229, 255, 0.8);*/
 	height: 60px;
 	text-align: left;
 }
@@ -50,9 +54,9 @@
 	display: inline;
 	float: left;
 	margin-bottom: 0;
-	background-color: #fff;
-	padding-top: 15px;
-	background-color: rgba(204, 229, 255, 0.8);
+	/*background-color: #fff;*/
+	padding-top: 0px;
+	/*background-color: rgba(204, 229, 255, 0.8);*/
 	height: 60px;
 	text-align: center;
 }
@@ -66,20 +70,21 @@ img {
   -moz-border-radius: 10 px;
   border-radius: 10px;	
   background-color: rgba(204, 229, 255, 0.8);
-  z-index:3;
+  padding-top:10px;
+  z-index:5;
 }
 #titleBar {
-   vertical-align: top;
+   /*vertical-align: top;*/
    width:1005px;
-   top:75px;
-   position: fixed;
+   top:60px;
+   /*position: fixed;*/
    background-color: rgba(204, 229, 255, 0.8);
-   	   -webkit-border-bottom-left-radius: 10px;
+   /*	   -webkit-border-bottom-left-radius: 10px;
        -moz-border-bottom-left-radius: 10 px;
 	   -webkit-border-bottom-right-radius: 10px;
        -moz-border-bottom-right-radius: 10 px;
        border-bottom-left-radius: 10px;	
-       border-bottom-right-radius: 10px;	
+       border-bottom-right-radius: 10px;*/	
    /*color: rgba(1, 1, 1, 0.8);*/
    z-index:3;
 }
